# aspara

./: .dockerignore  .gitignore  .readthedocs.yml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  biome.json  icons.config.json  mkdocs.yml  package.json  playwright.config.js  pnpm-lock.yaml  pyproject.toml  space_README.md  vite.config.js  vitest.config.js
.github/workflows/: ci.yml  hf-deploy.yml
benchmarks/: bench_metrics_api.py
docs/: aspara-theme.css  contributing.md  getting-started.md  index.md
docs/advanced/: configuration.md  dashboard.md  local-vs-remote.md  read-only-mode.md  storage.md  tracker-api.md
docs/api/: aspara.md  dashboard.md  index.md  run.md  tracker.md
docs/examples/: index.md  pytorch_example.md  sklearn_example.md  tensorflow_example.md
docs/user-guide/: basics.md  best-practices.md  concepts.md  dashboard-visualization.md  metadata.md  terminal-ui.md  troubleshooting.md
examples/: generate_random_runs.py  slow_metrics_writer.py
scripts/: build-icons.js
src/aspara/: __init__.py  cli.py  config.py  exceptions.py  logger.py
tests/: E2E_TEST_SETUP.md  conftest.py  fixtures.js  setup.js  test_timestamp.py  vitest-canvas-setup.js  vitest-setup.js
tests/catalog/: test_project_catalog.py  test_run_catalog.py  test_watcher.py
tests/core/: test_base_run.py  test_cli.py  test_config.py  test_run.py  test_utils.py  test_validators.py
tests/dashboard/: canvas-pixel-analysis.test.js  chart-color-palette.test.js  chart-controls.test.js  chart-export-utils.test.js  chart-interaction-utils.test.js  chart-interaction.test.js  chart-layout.test.js  chart-logic.test.js  chart-rendering.spec.js  chart-scale.test.js  chart-sse-update.test.js  chart-yscale.test.js  delete-api.test.js  delete-dialog.spec.js  metric-chart-factory.test.js  metrics-data-service-connection.test.js  metrics-data-service-reconnect.test.js  metrics-utils.test.js  note-editor-utils.test.js  note-editor.test.js  note-ui.spec.cjs  notifications.test.js  page-lifecycle.test.js  project-detail-integration.test.js  project-detail-sse.test.js  projects-list-utils.test.js  projects-list.test.js  run-detail-integration.test.js  run-detail.test.js  run-selector.test.js  runs-list-index.test.js  runs-list-sse-utils.test.js  runs-list-sse.test.js  runs-list-utils.test.js  settings-menu.test.js  sse-reconnect-manager.test.js  sse-status-indicator.test.js  status-utils.test.js  tag-editor.spec.cjs  (+27 more)
(+145 files in other folders)
